# Ein

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
Resources/Shaders/: default.frag  default.fs  default.vert  default.vs  lightsource.frag  lightsource.vert
Subsystems/Rendering/: camera.cpp  camera.hpp  mesh.cpp  mesh.hpp
Subsystems/Rendering/Resources/: geometry.cpp  geometry.hpp  shaders.cpp  shaders.hpp  texture.cpp  texture.hpp
Utility/: GL.hpp  GLFW.hpp  logger.hpp  readers.cpp  readers.hpp  templates.hpp  types.cpp  types.hpp
